--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 	--transition: cubic-bezier(0.4, 0, 0.2, 1);
 	--text-center: center;
 }
-
 body {
 	font-family: 'Roboto', 'Raleway', sans-serif;
 	color: var(--black);
@@ -50,7 +49,6 @@ li {
 .link-s:hover {
 	color: var(--blue);
 }
-
 .link-blue:hover,
 .link:hover {
 	color: var(--blue);
@@ -87,7 +85,6 @@ li {
 	padding: 0 0 0 278px;
 	margin: 0;
 }
-
 .logo-style {
 	font-family: 'Raleway';
 	color: var(--black);
@@ -123,7 +120,6 @@ li {
 	width: 100%;
 	background-color: var(--darkgrey);
 }
-
 .top {
 	background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%),
 		url('../images/portfolio.jpg');
@@ -172,14 +168,12 @@ li {
 	width: 270px;
 	margin: 0;
 }
-
 /* Services section */
 .services {
 	align-items: center;
 	flex-direction: column;
 	padding: 94px 0 94px 0;
 }
-
 .services-header {
 	font-weight: 700;
 	font-size: 36px;
@@ -195,7 +189,6 @@ li {
 	margin: 0;
 	justify-content: center;
 }
-
 .service-item {
 	position: relative;
 }
@@ -235,7 +228,6 @@ li {
 	transition-property: background-color;
 	transition-duration: 2s;
 }
-
 .button-index:hover {
 	color: var(--blue);
 	background-color: var(--white);
@@ -245,7 +237,6 @@ li {
 	font-size: 16px;
 	cursor: pointer;
 }
-
 .team-background {
 	background-color: var(--cream);
 	padding: 94px 0;
@@ -282,7 +273,6 @@ li {
 	line-height: 1.1875;
 	font-size: 16px;
 }
-
 .product-card-header {
 	margin: 20px 0 4px 24px;
 	line-height: 36px;
@@ -290,7 +280,6 @@ li {
 	font-weight: 700;
 	letter-spacing: 0.06em;
 }
-
 .product-card-text {
 	color: var(--grey);
 	margin: 0 0 0 24px;
@@ -365,7 +354,6 @@ li {
 	background-color: var(--blue);
 }
 /* footer */
-
 .partners-header {
 	font-weight: 700;
 	font-size: 36px;
@@ -374,7 +362,6 @@ li {
 	color: var(--black);
 	margin: 95px 0 50px 0;
 }
-
 /* Portfolio only*/
 .line {
 	border-bottom: var(--cream) solid 1px;
@@ -413,7 +400,6 @@ li {
 	margin: 0;
 }
 /* Portfolio only*/
-
 /* portfolia anim  */
 .portfolio-label {
 	position: relative;
@@ -423,8 +409,6 @@ li {
 	position: absolute;
 	margin-top: 0px;
 	margin-left: 0px;
-	/* top: 262;
-	left: 215; */
 	width: 372px;
 	background: rgba(33, 150, 243, 0.9);
 	font-size: 18px;
@@ -440,7 +424,6 @@ li {
 	transform: translateY(0);
 }
 /* portfolia anim  */
-
 /* Icons svg only no footer*/
 .svg-top-one {
 	fill: var(--grey);
@@ -504,11 +487,56 @@ li {
 	fill: var(--blue);
 	border-color: var(--blue);
 }
-
 /* Icons svg only */
-
+/* newsletter */
+.footer-newsletter {
+	margin-top: 12px;
+	margin-left: 78px;
+}
+.form-newsletter {
+	display: flex;
+	align-items: center;
+}
+.input-newsletter {
+	width: 358px;
+	height: 50px;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+	border-radius: 4px;
+	background-color: var(--darkgrey);
+	font-size: 16px;
+	line-height: 1.25;
+	color: rgba(255, 255, 255, 0.6);
+	padding: 15px 16px;
+	outline: none;
+}
+.btn-newsletter {
+	display: flex;
+	align-items: center;
+	text-align: center;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	letter-spacing: 0.06em;
+	fill: var(--white);
+	color: var(--white);
+	width: 200px;
+	height: 50px;
+	background: var(--blue);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	margin-left: 12px;
+	border: none;
+	padding: 10px 0 10px 42px;
+	cursor: pointer;
+}
+.icon-btn-newsletter {
+	margin-left: 24px;
+}
+/* newsletter */
 /* modal */
 .modal {
+	display: flex;
 	top: 50%;
 	left: 50%;
 	width: 528px;
@@ -531,6 +559,121 @@ li {
 	opacity: 0;
 	visibility: hidden;
 	transform: translateX(-50%) translateY(-50%) scale(0) rotate(0deg) skew(40deg, 40deg);
+}
+.header-modal {
+	position: relative;
+	margin: 0 0 10px 0;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.15;
+	text-align: center;
+	color: var(--black);
+	padding-top: 30px;
+}
+.form-modal {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 0px 40px 0px 40px;
+}
+.label-modal {
+	display: block;
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.01em;
+	color: var(--grey);
+}
+.input-modal {
+	width: 448px;
+	height: 40px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	margin-top: 4px;
+	margin-bottom: 10px;
+	padding: 12px 12px 12px 42px;
+	transition: border-color 250ms var(--transition);
+}
+.input-modal-icon {
+	fill: var(--black);
+	transition: fill 250ms var(--transition);
+}
+.form-highlight:hover > .input-modal,
+.form-highlight:focus-within > .input-modal,
+.form-highlight:hover > .input-modal-text,
+.form-highlight:focus-within > .input-modal-text,
+.form-highlight:hover > .input-modal-icon,
+.form-highlight:focus-within > .input-modal-icon {
+	fill: var(--blue);
+	border-color: var(--blue);
+	outline: none;
+}
+.icon-per {
+	position: absolute;
+	top: 97px;
+	left: 55px;
+}
+.icon-tel {
+	position: absolute;
+	top: 164px;
+	left: 55px;
+}
+.icon-mail {
+	position: absolute;
+	top: 233px;
+	left: 55px;
+}
+.input-modal-text {
+	width: 448px;
+	height: 120px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	margin-top: 4px;
+	margin-bottom: 20px;
+	resize: none;
+	padding: 12px 16px;
+	transition: border-color 250ms var(--transition);
+}
+.user-agreements {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 30px;
+}
+.agreement-text {
+	padding-left: 8px;
+}
+.agreement-link {
+	color: var(--blue);
+}
+.btn-modal-send {
+	width: 200px;
+	height: 50px;
+	background-color: var(--blue);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	letter-spacing: 0.06em;
+	color: var(--white);
+	border: none;
+	padding: 10px 76px;
+	margin: 0 auto;
+	cursor: pointer;
+}
+.box-custom {
+	display: block;
+	width: 16px;
+	height: 15px;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	background-image: url("data:image/svg+xml,%0A%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2222 1.66667V13.3333H1.77778V1.66667H14.2222ZM14.2222 0H1.77778C0.8 0 0 0.75 0 1.66667V13.3333C0 14.25 0.8 15 1.77778 15H14.2222C15.2 15 16 14.25 16 13.3333V1.66667C16 0.75 15.2 0 14.2222 0Z' fill='%23212121'/%3E%3C/svg%3E%0A");
+}
+.box-custom:checked {
+	background-image: url("data:image/svg+xml,%0A%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E%0A");
 }
 /* X */
 .btn {
