--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,7 @@ li {
 	z-index: 1;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 4px;
+	border: 1px solid var(--white);
 	margin: auto;
 	transition-property: visibility, opacity, transform;
 	transition-duration: 2s;
@@ -562,10 +563,8 @@ li {
 	display: block;
 }
 .modal:hover {
-	border: -1px solid var(--blue);
-	overflow: hidden;
+	border: 1px solid var(--blue);
 }
-
 .is-hidden {
 	pointer-events: none;
 	opacity: 0;
