--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,7 @@ li {
 	display: block;
 }
 .modal:hover {
-	border: 1px solid var(--blue);
+	opacity: 1;
 }
 .is-hidden {
 	pointer-events: none;
@@ -655,6 +655,12 @@ li {
 }
 .agreement-link {
 	color: var(--blue);
+	text-decoration: underline;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.agreement-link:hover,
+.agreement-link:focus {
+	color: var(--blue);
 }
 .btn-modal-send {
 	width: 200px;
@@ -675,16 +681,43 @@ li {
 	margin: 0 auto;
 	cursor: pointer;
 }
-.box-custom {
-	display: block;
+/* checkbox */
+.user-checkbox-label {
+	display: flex;
+	flex-direction: row;
+	gap: 8px;
+	align-items: center;
+	position: relative;
+	padding: 10px 0 20px 15px;
+}
+.checkbox {
 	width: 16px;
 	height: 15px;
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
-	background-image: url("data:image/svg+xml,%0A%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.2222 1.66667V13.3333H1.77778V1.66667H14.2222ZM14.2222 0H1.77778C0.8 0 0 0.75 0 1.66667V13.3333C0 14.25 0.8 15 1.77778 15H14.2222C15.2 15 16 14.25 16 13.3333V1.66667C16 0.75 15.2 0 14.2222 0Z' fill='%23212121'/%3E%3C/svg%3E%0A");
+	left: 15px;
+	opacity: 0;
+	pointer-events: visible;
 }
-.box-custom:checked {
-	background-image: url("data:image/svg+xml,%0A%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='15' rx='2' fill='%232196F3'/%3E%3Cpath d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E%0A");
+.user-checkbox-label input:checked ~ .checkbox-svg {
+	background-color: var(--blue);
+	fill: var(--blue);
+}
+.vector {
+	fill: var(--white);
+}
+.checkbox-svg {
+	width: 16px;
+	height: 15px;
+	left: 15px;
+	cursor: pointer;
+	position: absolute;
+	fill: var(#212121);
+	border-radius: 10%;
+	transition-property: fill;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-svg:hover {
+	fill: var(--blue);
 }
 /* X */
 .btn {
@@ -702,4 +735,3 @@ li {
 	color: var(--blue);
 	border-color: var(--blue);
 }
-/* X */
